--- a/EVP2/index.html
+++ b/EVP2/index.html
@@ -15,7 +15,7 @@
             padding: 15px 30px;
             background-color: transparent;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            width: 95px;
+            width: 128px;
         }
         .cm a:hover{
             background-color: rgb(0, 98, 65);
@@ -78,7 +78,7 @@
                         <div class="h3"><h4>Elige entre las diferentes opciones de desayuno. Válido del 10 al 12 de Mayo</h4></div>
                     </div>
                     <br>
-                    <p class="cm"><a href="">Conoce mas</a></p>
+                    <p class="cm"><a href="">Conoce más aquí</a></p>
                 </div>
             </div>
         </div>
@@ -86,12 +86,12 @@
             <div class="articulo1">
                 <div class="a1">
                     <div class="a2">
-                        <div class="h1"><h1>Sorprende a mamá con su desayuno favorito</h1></div>
+                        <div class="h1"><h1>Despierta el día con energía y sabor</h1></div>
                         <br>
-                        <div class="h3"><h4>Elige entre las diferentes opciones de desayuno. Válido del 10 al 12 de Mayo</h4></div>
+                        <div class="h3"><h4>Pide en tu tienda la combinación perfecta para iniciar el día con alegría y buen gusto</h4></div>
                     </div>
                     <br>
-                    <p class="cm"><a href="">Conoce mas</a></p>
+                    <p class="cm"><a href="">Conoce más aquí</a></p>
                 </div>
             </div>
             <div class="articulo2"><img src="img/NA1.png" alt="" height="100%" width="100%"></div>
@@ -114,9 +114,9 @@
         <div id="final">
             <div id="pielink">
                 <ul>
-                    <li><a href=""><img src="img/1713419166FB_Logo_PNG.png" alt="" height="50px"></a></li>
-                    <li><a href=""><img src="img/Instagram_icon.png" alt="" height="50px"></a></li>
-                    <li><a href=""><img src="img/twitter_x_new_logo_square_x_icon_256075.png" alt="" height="50px"></a></li>
+                    <li><a href="https://www.facebook.com/starbucksperu/?locale=es_LA" target="_blank"><img src="img/1713419166FB_Logo_PNG.png" alt="" height="50px"></a></li>
+                    <li><a href="https://www.instagram.com/starbuckspe/?hl=es" target="_blank"><img src="img/Instagram_icon.png" alt="" height="50px"></a></li>
+                    <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fstarbucksperu" target="_blank"><img src="img/twitter_x_new_logo_square_x_icon_256075.png" alt="" height="50px"></a></li>
                 </ul>
                 <p class="copyright">© 2024 Starbucks Coffee Company. All rights reserved.</p>
             </div>
